finish data crips

--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -33,10 +33,10 @@ body {
 
 @media(min-width: 768px) {
     .sidebar {
-        width: 18rem !important;
+        width: 18em !important;
         
         .nav-item .nav-link span {
-            font-size: 16px;
+            font-size: 14px;
         }
     }
 
