--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -2,6 +2,10 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
+.font-dark {
+    color:#2b2b2b;
+}
+
 .btn {
     border-radius: 0;
 }
